gitops/bootstrap/prod/ingress-patch-login.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sky-be-prd-login-fix
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$1
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: workspace-prd-api.skyfirstlabs.com
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: sky-be-prd-common-app
                port:
                  number: 80
  tls:
    - hosts:
        - workspace-prd-api.skyfirstlabs.com
      secretName: backend-tls-prod
